--- a/admin/.env
+++ b/admin/.env
@@ -1,8 +1,8 @@
 REACT_APP_BASE_URL=http://localhost:8000
 
-REACT_APP_FIREBASE_API_KEY=AIzaSyDVHmhldRufhR3-J8mQ3BlqNHvzEAo3vSE
-REACT_APP_FIREBASE_AUTH_DOMAIN=sample-firebase-ai-app-5d184.firebaseapp.com
-REACT_APP_FIREBASE_PROJECT_ID=sample-firebase-ai-app-5d184
-REACT_APP_FIREBASE_STORAGE_BUCKET=sample-firebase-ai-app-5d184.appspot.com
+REACT_APP_FIREBASE_API_KEY=AIzaSyDzIf5NIa8sS2Ux4B_7I_mop7Y8H9B1ccE
+REACT_APP_FIREBASE_AUTH_DOMAIN=shop-9ba92.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=shop-9ba92
+REACT_APP_FIREBASE_STORAGE_BUCKET=shop-9ba92.firebasestorage.app
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=674697569795
 REACT_APP_FIREBASE_APP_ID=1:674697569795:web:337291aaf494912eb49036
