--- a/client/.env
+++ b/client/.env
@@ -2,8 +2,8 @@ REACT_APP_API_URL=http://localhost:8000
 
 
 
-REACT_APP_RAZORPAY_KEY_ID=
-REACT_APP_RAZORPAY_KEY_SECRET=
+# REACT_APP_RAZORPAY_KEY_ID=
+# REACT_APP_RAZORPAY_KEY_SECRET=
 
 REACT_APP_FIREBASE_API_KEY=AIzaSyDVHmhldRufhR3-J8mQ3BlqNHvzEAo3vSE
 REACT_APP_FIREBASE_AUTH_DOMAIN=sample-firebase-ai-app-5d184.firebaseapp.com
