--- a/admin/package.json
+++ b/admin/package.json
@@ -28,9 +28,9 @@
     "react-slick": "^0.30.2",
     "react-tag-input-component": "^2.0.2",
     "react-top-loading-bar": "^2.3.1",
+    "recharts": "^2.13.3",
     "swiper": "^11.1.0",
-    "web-vitals": "^2.1.4",
-    "recharts": "^2.13.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "set PORT=3002 && react-scripts start",
