--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,5 @@
-# REACT_APP_API_URL=http://localhost:8000
-REACT_APP_API_URL=https://eshop-server-x4w1.onrender.com
+REACT_APP_API_URL=http://localhost:8000
+
 # Uncomment and provide the Razorpay details if necessary
 # REACT_APP_RAZORPAY_KEY_ID=
 # REACT_APP_RAZORPAY_KEY_SECRET=
