--- a/server/.env
+++ b/server/.env
@@ -1,9 +1,8 @@
 PORT = 8000
 CLIENT_BASE_URL=http://localhost:3008
 
-EMAIL = clonemerntest@gmail.com
-EMAIL_PASS = 123123aA
-# qrdz pioh vgcz nojg   
+EMAIL = autochatbot40@gmail.com
+EMAIL_PASS = dvrq oeoq zphd ctex
 
 CONNECTION_STRING = "mongodb+srv://admin1:aCyR2tTRrgaRkDlg@cluster0.1s3pi.mongodb.net/eShop?retryWrites=true&w=majority&appName=Cluster0"
 
