--- a/admin/.env
+++ b/admin/.env
@@ -1,4 +1,4 @@
-REACT_APP_BASE_URL=http://localhost:8000
+REACT_APP_BASE_URL=https://eshop-server-x4w1.onrender.com
 
 REACT_APP_FIREBASE_API_KEY=AIzaSyDzIf5NIa8sS2Ux4B_7I_mop7Y8H9B1ccE
 REACT_APP_FIREBASE_AUTH_DOMAIN=shop-9ba92.firebaseapp.com
