--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=http://localhost:8000
+REACT_APP_API_URL=https://eshop-server-x4w1.onrender.com
 
 # Uncomment and provide the Razorpay details if necessary
 # REACT_APP_RAZORPAY_KEY_ID=
